5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1758_1189.log
== SUBMITION (2019-05-29 19:39:00) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" "," ")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.598098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:39:03) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" "," ")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.372524
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:39:12) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" "," ")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
1.37716
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:39:12) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" "," ")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
2.16568
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:39:12) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" "," ")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
2.32341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:39:12) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" "," ")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
2.44705
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:39:13) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" "," ")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
2.43356
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:39:14) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" "," ")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
2.31815
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:39:17) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" "," ")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.532438
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1758/1189/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:39:18) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" "," ")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
1.90335
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:39:18) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" "," ")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
2.30822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:39:18) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" "," ")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
2.08239
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:39:18) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" "," ")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
2.37812
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:40:03) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" ","")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.358865
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:40:06) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" ","")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.470302
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1189/main.py", line 7, in <module>
    while (i >= -len(new)):
NameError: name 'new' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:40:18) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" ","")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:40:22) 
-- CODE:
from numpy import *
s = input("String: ")
nem = s.replace(" ","")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:40:41) 
-- CODE:
from numpy import *
s = input("String: ")
new = s.replace(" ","")
inv = ""
i = -1

while (i >= -len(new)):
	inv = inv + new[i]
	i = i - 1
print(new.upper())

if (inv == new):
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.592802
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
